# env-integrity-checK

./: .gitignore  README.md  pyproject.toml
env_integrity_check/: __init__.py  cli.py  metrics.py  policy_loader.py  sanitizer.py  sarif_reporter.py  schema_introspect.py  secrets_scanner.py
examples/: .env.example  __init__.py  example.env  myapp_config.py  policy.yaml  schema.py
src/env_integrity_check/: __init__.py  cli.py  metrics.py  policy_loader.py  rules.py  sanitizer.py  sarif_reporter.py  schema_introspect.py  secrets_scanner.py
tests/: __init__.py  test_cli.py  test_metrics.py  test_policy_loader.py  test_sanitizer.py  test_sarif_reporter.py  test_sarif_stability.py  test_schema_introspect.py  test_secrets_scanner.py
