[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-integrity-check"
version = "0.5.0"
description = "Deterministic environment validation tool combining Pydantic schema introspection, secrets scanning, and SARIF reporting"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
secrets = [
    "detect-secrets>=1.4.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "env-integrity-check[secrets,test]",
]

[project.scripts]
env-integrity-check = "env_integrity_check.cli:cli"

[project.urls]
Homepage = "https://github.com/canstralian/env-integrity-check"
Repository = "https://github.com/canstralian/env-integrity-check"
Issues = "https://github.com/canstralian/env-integrity-check/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
